# Virtual

.github/workflows/: README.md  manual-workflow.yml  python-app.yml
Exam/: ReadME.md  main.py  test.py
Lab_1/: .gitignore  Anime_Exam.py  Anime_Test.py  Library_Test.py  Metods_List.ipynb  README.md  app.py  rich_example.py
Lab_1/pictures/: desktop.ini
Lab_1/templates/: index.html
Lab_1_Math/: 1_matplotlib.ipynb  README.md
Lab_2/: .coverage  README.md  app.py  pyproject.toml  test.py  test1.py  test_1.ipynb
Lab_2_Math/: 1_linear_programming.ipynb  2_sklearn.ipynb  README.md
